--- a/controllers/settings/index.htm
+++ b/controllers/settings/index.htm
@@ -1,8 +1,8 @@
 <button
     class="btn btn-danger"
     data-request="onEmptyLog"
-    data-request-confirm="<?= e(trans('luketowers.activitylog::lang.settings.empty_log_confirm')); ?>"
+    data-request-confirm="<?= e(trans('luketowers.easyaudit::lang.settings.empty_log_confirm')); ?>"
     data-request-flash="true"
     >
-    <?= e(trans('luketowers.activitylog::lang.settings.empty_log')); ?>
+    <?= e(trans('luketowers.easyaudit::lang.settings.empty_log')); ?>
 </button>
