--- a/controllers/activities/_list_toolbar.htm
+++ b/controllers/activities/_list_toolbar.htm
@@ -1,1 +1,9 @@
+<button
+    class="btn btn-danger"
+    data-request="onEmptyLog"
+    data-request-confirm="<?= e(trans('luketowers.easyaudit::lang.settings.empty_log_confirm')); ?>"
+    data-request-flash="true"
+    >
+    <?= e(trans('luketowers.easyaudit::lang.settings.empty_log')); ?>
+</button>
 <div data-control="toolbar"></div>
