Cleaned up the implementation of the system audit log controller

--- a/controllers/activities/_list_toolbar.htm
+++ b/controllers/activities/_list_toolbar.htm
@@ -1,9 +1,11 @@
-<button
-    class="btn btn-danger"
-    data-request="onEmptyLog"
-    data-request-confirm="<?= e(trans('luketowers.easyaudit::lang.settings.empty_log_confirm')); ?>"
-    data-request-flash="true"
-    >
-    <?= e(trans('luketowers.easyaudit::lang.settings.empty_log')); ?>
-</button>
+<?php if (\BackendAuth::getUser()->hasAccess('luketowers.easyaudit.manage_settings')) : ?>
+    <button
+        class="btn btn-danger"
+        data-request="onEmptyLog"
+        data-request-confirm="<?= e(trans('luketowers.easyaudit::lang.settings.empty_log_confirm')); ?>"
+        data-request-flash="true"
+        >
+        <?= e(trans('luketowers.easyaudit::lang.settings.empty_log')); ?>
+    </button>
+<?php endif; ?>
 <div data-control="toolbar"></div>
